[package]
name = "ray_stack"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
solana-client = "1.18"
solana-sdk = "1.18"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
solana-transaction-status = "1.18"
base64 = "0.21"
bs58 = "0.4"
borsh = "1.2"
byteorder = "1.5"
